# MythWeaver

./: .env.example  .gitignore  AGENTS.md  CURSOR.md  README.md  pyproject.toml
concepts/: afterglow_valley.md  cozy_beautiful_world.md  hearthbound_horizons.md  hearthvale_atelier.md  ironwood_frontier.md  mythweaver_forever_world.md  peacekeeper_worldbreaker.md  starlit_wilderlands.md  the_last_mythic_epoch.md
docs/: api.md  architecture.md  autopilot-smoke-test.md
examples/: afterglow_valley.md  afterglow_valley.selected_mods.json  auto_target_any_loader.selected_mods.json  cozy_beautiful_world.md  cozy_beautiful_world.selected_mods.json  cozy_beautiful_world_agent_workflow.md  create_global_dominion.content.json  curseforge_manifest.selected_mods.json  hearthbound_horizons.selected_mods.json  hearthvale_atelier.selected_mods.json  ironwood_frontier.md  ironwood_frontier.selected_mods.json  multisource.selected_mods.json  peacekeeper_worldbreaker.md  peacekeeper_worldbreaker.selected_mods.json  starlit_wilderlands.selected_mods.json
profiles/: ashfall-frontier.profile.json  kingdoms-after-dark.selected_mods.json  the-world-beneath-the-roots.profile.json
tests/: conftest.py  test_agent_selected_workflow.py  test_agent_tools.py  test_api_autopilot.py  test_ashfall_selection_priority.py  test_autopilot_agent_service.py  test_autopilot_blockers.py  test_autopilot_cli.py  test_autopilot_contracts.py  test_autopilot_diagnosis_planning.py  test_autopilot_executor.py  test_autopilot_loop.py  test_autopilot_memory.py  test_autopilot_planner.py  test_build_smoketest.py  (+62 more)
(+127 files in other folders)
