[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mythweaver"
version = "0.1.0"
description = "Agent-first local Minecraft modpack intelligence service."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "MythWeaver" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "alembic>=1.13",
  "typer>=0.12",
  "textual>=0.80",
  "rich>=13.7",
  "tenacity>=8.5",
  "tomlkit>=0.13",
  "ruamel.yaml>=0.18",
  "orjson>=3.10",
  "structlog>=24.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.11"
]

[project.scripts]
mythweaver = "mythweaver.cli.main:main"
mythweaver-mcp = "mythweaver.mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
cache_dir = ".test-output/.pytest_cache"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
